MonetDB5/src/mal/Tests/tst105.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2003, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## check propagation of type variables over bats
## can be checked after bat module has been added
#
#module bat2;
#command new(h:any::1,t:any::2):bat[any::1,any::2]= GDKbatnew;
!ERROR: address of 'GDKbatnew' not found
command bat2.new(h:any::1,t:any::2):bat[any::1,any::2] = GDKbatnew; #0  dynamic (new:bat[any::1,any::2])<-(h:any::1)(t:any::2)
#
#a:= bat2.new(str,int);
#b:= bat2.new(str,int);
#c:= new(str,int);
#
function Admin.main():int; #0  (main:int)
    a := bat2.new(str,int); #1 GDKbatnew (a:bat[str,int])<-(str:str)(int:int)
    b := bat2.new(str,int); #2 GDKbatnew (b:bat[str,int])<-(str:str)(int:int)
    c := bat2.new(str,int); #3 GDKbatnew (c:bat[str,int])<-(str:str)(int:int)
end main; #4  
!ERROR: MALexception:Admin.main[1]:address of function missing
>